files from previous web site added

--- a/mkdocs/docs/css/faust.css
+++ b/mkdocs/docs/css/faust.css
@@ -6,24 +6,9 @@
     font-style: normal;
 
 }
-.guido-code {
-	width: 50%;
-	border: 1px solid #c3c3c3;
-	border-radius: 10px;
-	padding: 20px;
+
+.faust-tools {
     background-color: #F8F8F8;
-}
-.guido-page {
-/* 	width: 50%; */
-	border: 1px solid #c3c3c3;
-	padding: 10px;
-	margin-bottom: 10px;
-}
-.guido-medium {
-	width: 75%;
-}
-.guido-full {
-	width: 100%;
 }
 
 .try_it {
