add faust-options class

--- a/mkdocs/docs/css/faust.css
+++ b/mkdocs/docs/css/faust.css
@@ -1,6 +1,11 @@
 
 .faust-tools {
     background-color: #F8F8F8;
+    font-size: 90%
+}
+.faust-options {
+    background-color: #F8F8F8;
+    font-size: 90%;0
 }
 
 .try_it {
